--- a/src/app/modules/employee/pages/employee-list/employee-list.component.html
+++ b/src/app/modules/employee/pages/employee-list/employee-list.component.html
@@ -1,6 +1,12 @@
 <div class="card mx-1">
     <div class="card-body">
         <h3 class="display-4">Employee List</h3>
+        <div class="dropdown-divider "></div>
+
+        <div class="d-flex flex-row-reverse">
+            <button type="button" class="btn btn-primary my-2" routerLink="creation">Create</button>
+        </div>
+
         <p-table #dt [columns]="cols" [value]="displayEmployee" [paginator]="true" [rows]="10">
             <ng-template pTemplate="caption">
                 <div style="text-align: right">
