--- a/src/app/modules/timesheets/pages/timesheet-view/timesheet-view.component.html
+++ b/src/app/modules/timesheets/pages/timesheet-view/timesheet-view.component.html
@@ -21,8 +21,10 @@
         <div class="dropdown-divider my-3"></div>
 
         <div class="d-flex flex-row-reverse">
-            <!-- <button type="button" class="btn btn-primary  m-1 px-3" (click)="onSave($event)">Save</button>
-            <button type="button" class="btn btn-primary m-1 px-2" (click)="onSubmit($event)">Submit</button> -->
+            <button type="button" class="btn btn-primary m-1 px-2" *ngIf="timesheet.status == 'Rejected'"
+                [routerLink]="['/content/timesheets/editRejectedTimesheet', timesheet.timesheetId]">
+                Create New Version</button>
+            <button type="button" class="btn btn-secondary  m-1 px-3" routerLink="/content/timesheets">Cancel</button>
         </div>
     </div>
 </div>
