re-submit rejected timesheet completed

--- a/src/app/modules/timesheets/pages/timesheet-approver-view/timesheet-approver-view.component.html
+++ b/src/app/modules/timesheets/pages/timesheet-approver-view/timesheet-approver-view.component.html
@@ -27,7 +27,7 @@
         <div class="d-flex flex-row-reverse">
             <button type="button" class="btn btn-outline-success  m-1 px-3" (click)="onApprove($event)">Approve</button>
             <button type="button" class="btn btn-outline-danger m-1 px-2" (click)="onReject($event)">Reject</button>
-            <button type="button" class="btn btn-primary m-1 px-2" (click)="onCancel($event)">Cancel</button>
+            <button type="button" class="btn btn-primary m-1 px-2">Cancel</button>
         </div>
 
     </div>
