wp report general info

--- a/src/app/modules/reports/pages/reports.component.html
+++ b/src/app/modules/reports/pages/reports.component.html
@@ -1,22 +1,1 @@
-<p>reports works!</p>
-<p>reports works!</p>
-<p>reports works!</p>
-<p>reports works!</p>
-<p>reports works!</p>
-<p>reports works!</p>
-<p>reports works!</p>
-<p>reports works!</p>
-<p>reports works!</p>
-<p>reports works!</p>
-<p>reports works!</p>
-<p>reports works!</p>
-<p>reports works!</p>
-<p>reports works!</p>
-<p>reports works!</p>
-<p>reports works!</p>
-<p>reports works!</p>
-<p>reports works!</p>
-<p>reports works!</p>
-<p>reports works!</p>
-<p>reports works!</p>
-<p>reports works!</p>
+<app-wp-report-view></app-wp-report-view>
