--- a/src/app/modules/reports/pages/wp-report-view/wp-report-view.component.html
+++ b/src/app/modules/reports/pages/wp-report-view/wp-report-view.component.html
@@ -1,5 +1,8 @@
 <div class="card mx-1">
     <div class="card-body">
+        <!-- Title -->
+        <h3 class="display-4">Work Package Report Detail</h3>
+        <!-- alert -->
         <app-wp-report [wpr]="wpr" *ngIf="wpr" [mode]="mode"></app-wp-report>
     </div>
 </div>
