--- a/src/app/modules/reports/pages/wp-report-creation/wp-report-creation.component.html
+++ b/src/app/modules/reports/pages/wp-report-creation/wp-report-creation.component.html
@@ -1,5 +1,5 @@
 <div class="card mx-1">
     <div class="card-body">
-        <app-wp-report [wpr]="wpr" *ngIf="wpr" [mode]="mode"></app-wp-report>
+        <app-wp-report-stepper-creation (submitEvent)="submitReport()" [wpr]="wpr"></app-wp-report-stepper-creation>
     </div>
 </div>
