--- a/src/app/modules/employee/pages/employee-creation/employee-creation.component.html
+++ b/src/app/modules/employee/pages/employee-creation/employee-creation.component.html
@@ -13,7 +13,7 @@
         <!-- Action section-->
         <div class="dropdown-divider my-3"></div>
         <div class="d-flex flex-row-reverse">
-            <button type="button" class="btn btn-primary  m-1 px-3" (click)="onCreate(validationError)">Create</button>
+            <button type="button" class="btn btn-primary  m-1 px-3" (click)="onCreate($event)">Create</button>
             <button type="button" class="btn btn-primary m-1 px-2" (click)="onCancel($event)">Cancel</button>
         </div>
         <div class="dropdown-divider my-3"></div>
