--- a/src/app/shared/alertPromp/alertPromp.component.html
+++ b/src/app/shared/alertPromp/alertPromp.component.html
@@ -9,7 +9,7 @@
 <ng-template #validationError>
     <div class="modal-header">
         <h4 class="modal-title pull-left">Validation Error</h4>
-        <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
+        <button type="button" class="close pull-right" aria-label="Close">
             <span aria-hidden="true">&times;</span>
         </button>
     </div>
