--- a/src/app/modules/reports/pages/reports.component.html
+++ b/src/app/modules/reports/pages/reports.component.html
@@ -1,1 +1,2 @@
-<app-wp-report-creation></app-wp-report-creation>
+<!-- <app-wp-report-creation></app-wp-report-creation> -->
+<app-project-report-view></app-project-report-view>
