--- a/src/app/modules/employee/component/employee/employee.component.html
+++ b/src/app/modules/employee/component/employee/employee.component.html
@@ -102,12 +102,12 @@
             </div>
             <input type="text" class="form-control" value="{{employee.labourGrade.labourGradeName}}"
                 *ngIf="mode==='read'" [readOnly]="true">
-            <p-dropdown class="form-control" [options]="grade" [(ngModel)]="selectedGrade"
-                *ngIf="mode ==='create' || mode==='update'" placeholder="{{employee.labourGrade.labourGradeName}}"
+            <p-dropdown class="form-control" [options]="greadeDropdown" [(ngModel)]="selectedGrade"
+                *ngIf="mode ==='create' || mode==='update'"
+                placeholder="{{employee.labourGrade ? employee.labourGrade.labourGradeName : 'choose a Labour Grade'}}"
                 optionLabel="label" [style]="{'border-width':'0px','padding':'0px'}"></p-dropdown>
         </div>
         <span *ngIf="alerts.labourGrade" class="error my-2"><small>{{alerts.labourGrade.msg}}</small></span>
-
 
     </div>
     <div class="col-1"></div>
