luca update the project link among creation page + project component

--- a/src/app/modules/projects/pages/project-list/project-list.component.html
+++ b/src/app/modules/projects/pages/project-list/project-list.component.html
@@ -1,1 +1,4 @@
 <p>project-list works!</p>
+<button type="button" class="btn btn-primary my-2" routerLink="creation">Create</button>
+<button type="button" class="btn btn-primary my-2" [routerLink]="['edit', 111]">edit</button>
+<button type="button" class="btn btn-primary my-2" [routerLink]="['view', 111]">view</button>
