--- a/src/app/core/layout/nav/nav.component.html
+++ b/src/app/core/layout/nav/nav.component.html
@@ -6,6 +6,7 @@
     <li class="list-group-item">Morbi leo risus</li>
     <li class="list-group-item">Porta ac consectetur ac</li>
     <li class="list-group-item">Vestibulum at eros</li>
+    <li class="list-group-item"><a routerLink="/content/projects">Projects</a></li>
 
 
 </ul>
