--- a/src/app/modules/projects/pages/project-creation/project-creation.component.html
+++ b/src/app/modules/projects/pages/project-creation/project-creation.component.html
@@ -5,11 +5,12 @@
         <!-- alert -->
         <!-- <shared-alertPromp [alerts]="alerts"></shared-alertPromp> -->
 
-<!-- 
+        <!-- 
         <app-employee [employee]="employee" [mode]="mode" [validUsername]="validUsername"
             (changeEmpCode)="validateEmployeeCode()" (changeUsername)="validateUserName()"
             [validEmployeeCode]="validEmployeeCode" [alerts]="alerts"></app-employee> -->
-            <app-project [mode]="mode"></app-project>
+        <app-project [mode]="mode" [project]="newProject"></app-project>
+
         <!-- Action section-->
         <div class="dropdown-divider my-3"></div>
         <div class="d-flex flex-row-reverse">
