--- a/src/app/modules/projects/pages/project-creation/project-creation.component.html
+++ b/src/app/modules/projects/pages/project-creation/project-creation.component.html
@@ -3,13 +3,10 @@
         <!-- Title -->
         <h3 class="display-4">Create Project</h3>
         <!-- alert -->
-        <!-- <shared-alertPromp [alerts]="alerts"></shared-alertPromp> -->
+        <shared-alertPromp [alerts]="alerts"></shared-alertPromp>
 
-        <!-- 
-        <app-employee [employee]="employee" [mode]="mode" [validUsername]="validUsername"
-            (changeEmpCode)="validateEmployeeCode()" (changeUsername)="validateUserName()"
-            [validEmployeeCode]="validEmployeeCode" [alerts]="alerts"></app-employee> -->
-        <app-project [mode]="mode" [project]="newProject"></app-project>
+        <app-project [mode]="mode" [project]="newProject" [alerts]="alerts"
+        (changeProjCode)="validateProjectCode()"></app-project>
 
         <!-- Action section-->
         <div class="dropdown-divider my-3"></div>
