--- a/src/app/modules/projects/components/project/project.component.html
+++ b/src/app/modules/projects/components/project/project.component.html
@@ -31,12 +31,12 @@
                     <i *ngIf="validProjectCode" class="material-icons pass my-2">check_circle</i>
                     <i *ngIf="!validProjectCode" class="material-icons error  my-2">error</i>
                 </div>
-        
+
             </div>
         </div>
         <span *ngIf="alerts.projectCode" class="error my-2"><small>{{alerts.projectCode.msg}}</small></span>
 
-        
+
     </div>
 
     <div class="col-1"></div>
@@ -51,12 +51,12 @@
 
         <!-- start date -->
         <div class="input-group">
-            <div class="input-group-prepend"> 
+            <div class="input-group-prepend">
                 <span class="input-group-text">Start Date</span>
             </div>
-            <p-calendar *ngIf="mode==='create' || mode==='update'" showTime="true" showIcon="true" [(ngModel)]="project.startDate"
-            hideOnDateTimeSelect="true"></p-calendar>
-            <input *ngIf="mode==='read'" type="text" class="form-control" [(ngModel)]="project.startDate" readonly=true>         
+            <p-calendar *ngIf="mode==='create' || mode==='update'" showTime="true" showIcon="true"
+                [(ngModel)]="project.startDate" hideOnDateTimeSelect="true"></p-calendar>
+            <input *ngIf="mode==='read'" type="text" class="form-control" [(ngModel)]="project.startDate" readonly=true>
         </div>
 
     </div>
@@ -67,7 +67,7 @@
                 <span class="input-group-text">End Date</span>
             </div>
             <p-calendar *ngIf="mode==='create'" showTime="true" showIcon="true" [(ngModel)]="project.endDate"
-            hideOnDateTimeSelect="true"></p-calendar>
+                hideOnDateTimeSelect="true"></p-calendar>
             <input *ngIf="mode==='read'" type="text" class="form-control" [(ngModel)]="project.endDate" readonly=true>
         </div>
     </div>
@@ -104,8 +104,11 @@
             <div class="input-group-prepend">
                 <span class="input-group-text">Project Manager</span>
             </div>
+            <input type="text" class="form-control"
+                [(value)]="project.projectManager.empFirstName+' '+project.projectManager.empLastName"
+                [readOnly]="true">
         </div>
-        <!-- <span *ngIf="alerts.projectManager" class="error my-2"><small>{{alerts.projectManager.msg}}</small></span> -->
+        <span *ngIf="alerts.projectManager" class="error my-2"><small>{{alerts.projectManager.msg}}</small></span>
     </div>
     <div class="col-1"></div>
 </div>
@@ -119,14 +122,16 @@
             <div class="input-group-prepend">
                 <span class="input-group-text">Team Members</span>
             </div>
-                <div *ngFor="let item of employees" class="ui-g">
-                    <div class="ui-g-24" class="input-group-text" style="padding:6px; margin:4px 4px 4px 8px; border:1px solid; background-color:#BBBBBB;">{{item}}</div>
+            <div *ngFor="let item of employees" class="ui-g">
+                <div class="ui-g-24" class="input-group-text"
+                    style="padding:6px; margin:4px 4px 4px 8px; border:1px solid; background-color:#BBBBBB;">{{item}}
                 </div>
+            </div>
         </div>
-        <p-listbox *ngIf="mode ==='create'" [options]="employeeDropdown" multiple="multiple" checkbox="checkbox" 
-        filter="filter" optionLabel="label" [style]="{'border-width':'0px','padding':'0px'}"
-        [(ngModel)]="project.teamMembers" (click)="teamMemberSelect()"></p-listbox>
-    
+        <p-listbox *ngIf="mode ==='create'" [options]="employeeDropdown" multiple="multiple" checkbox="checkbox"
+            filter="filter" optionLabel="label" [style]="{'border-width':'0px','padding':'0px'}"
+            [(ngModel)]="project.teamMembers" (click)="teamMemberSelect()"></p-listbox>
+
 
         <!-- <span *ngIf="alerts.teamMembers" class="error my-2"><small>{{alerts.teamMembers.msg}}</small></span> -->
     </div>
@@ -141,8 +146,8 @@
             <div class="input-group-prepend">
                 <span class="input-group-text">Description</span>
             </div>
-            <textarea type="text class="form-control cols="70" rows="6" [(ngModel)]="project.description"
-            [readOnly]="mode === 'read'"></textarea>
+            <textarea type="text class=" form-control cols="70" rows="6" [(ngModel)]="project.description"
+                [readOnly]="mode === 'read'"></textarea>
         </div>
         <!-- <span *ngIf="alerts.description" class="error my-2"><small>{{alerts.description.msg}}</small></span> -->
     </div>
@@ -154,7 +159,7 @@
 <div *ngIf="mode ==='read' || mode==='update' || mode==='create'">
     <div>
         <div class="dropdown-divider  my-3"></div>
-        <h5 class="my-3" >Status</h5>
+        <h5 class="my-3">Status</h5>
         <div class="form-row">
             <div class="col-12">
 
@@ -170,7 +175,7 @@
                         <label
                             [className]="project.isClosed ? 'btn btn-outline-secondary active' : 'btn btn-outline-secondary'">
                             <input type="radio" name="isClosed" id="closed" [value]=true [(ngModel)]="project.isClosed"
-                                [disabled]="mode==='create' || mode==='read'"> 
+                                [disabled]="mode==='create' || mode==='read'">
                             Closed
                         </label>
                     </div>
